--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@ds.e/react",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^17.0.36",
     "react": "^17.0.2",
+    "rollup": "^2.60.1",
+    "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.2"
+  },
+  "scripts": {
+    "build": "rollup -c"
   }
 }
