--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -12,6 +12,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "dev": "parcel src/index.html -p 3001"
-  }
+    "dev": "parcel --no-cache src/index.html -p 3001 "
+  },
+  "private": true
 }
