--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -4,6 +4,10 @@
   "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.3",
     "typescript": "^4.5.2"
   },
   "files": [
@@ -11,6 +15,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "yarn build -w"
+    "dev": "yarn build -w",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   }
 }
