--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@storybook/react": "^6.4.4",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,8 @@
     "build": "rollup -c",
     "dev": "yarn build --watch",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook:start": "start-storybook",
+    "storybook:build": "build-storybook"
   }
 }
