--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,12 +7,16 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@storybook/react": "^6.4.4",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^5.3.19",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.36",
+    "babel-loader": "^8.2.3",
     "jest": "^27.4.3",
     "react": "^17.0.2",
     "rollup": "^2.60.1",
