--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@storybook/addon-a11y": "5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/preset-typescript": "^3.0.0",
@@ -17,6 +18,7 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.36",
     "babel-loader": "^8.2.3",
+    "chromatic": "^6.1.0",
     "jest": "^27.4.3",
     "react": "^17.0.2",
     "rollup": "^2.60.1",
@@ -29,6 +31,7 @@
     "test": "jest",
     "test:watch": "yarn test --watch",
     "storybook:start": "start-storybook",
-    "storybook:build": "build-storybook"
+    "storybook:build": "build-storybook",
+    "chromatic": "chromatic"
   }
 }
