--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,5 +33,8 @@
     "storybook:start": "start-storybook",
     "storybook:build": "build-storybook",
     "chromatic": "chromatic"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
