--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ds.e/foundation",
+  "name": "@matoss/foundation",
   "version": "0.1.0",
   "main": "lib/index.js",
   "license": "MIT",
@@ -21,5 +21,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "a17cdf7e53786b777ca6808a081c3e63fabd4b48"
 }
