fix: files for package.json files

--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -28,6 +28,10 @@
       "pre-commit": "lint-staged"
     }
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "lint-staged": {
     "*.scss": "yarn lint:fix"
   },
