--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,6 +25,9 @@
     "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.2"
   },
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "rollup -c",
     "dev": "yarn build --watch",
