--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "commitizen": "^4.1.2",
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5",
+    "lerna": "^3.22.1"
   },
   "private": true,
   "workspaces": {
@@ -21,9 +26,8 @@
     "dev": "yarn lerna run dev",
     "test": "yarn lerna run test",
     "test:watch": "yarn lerna run test:watch",
-    "publish": "yarn test && yarn build && yarn lerna publish"
-  },
-  "publishConfig": {
-    "access": "public"
+    "publish": "yarn test && yarn build && yarn lerna publish",
+    "test:chromatic": "yarn lerna run test:chromatic",
+    "build:storybook": "yarn build && yarn lerna run build-storybook"
   }
 }
