--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -1,17 +1,13 @@
 {
   "name": "@playground/react",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.36",
-    "@types/react-dom": "^17.0.11",
-    "parcel-bundler": "^1.12.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.5.2"
+    "parcel-bundler": "^1.12.5"
   },
   "scripts": {
-    "dev": "parcel src/index.html -p 3001"
-  }
+    "dev": "parcel --no-cache src/index.html -p 3001"
+  },
+  "private": true
 }
