--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "parcel-bundler": "^1.12.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "dev": "parcel --no-cache src/index.html -p 3001"
