feat: add commitizen

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
-    "commitizen": "^4.1.2",
-    "cz-conventional-changelog": "^3.2.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.2.5",
     "lerna": "^3.22.1"
   },
@@ -26,8 +26,14 @@
     "dev": "yarn lerna run dev",
     "test": "yarn lerna run test",
     "test:watch": "yarn lerna run test:watch",
-    "publish": "yarn test && yarn build && yarn lerna publish",
+    "publish": "yarn test && yarn build && lerna publish",
     "test:chromatic": "yarn lerna run test:chromatic",
-    "build:storybook": "yarn build && yarn lerna run build-storybook"
+    "build:storybook": "yarn build && yarn lerna run build-storybook",
+    "commit": "yarn git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
