--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: Build & Test CI
 on: 
   push:
     branches:
-      - master
+      - main
   pull_request:
       branches:
-        - master
+        - main
 
 jobs: 
   builds:
