--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,15 @@ on:
 jobs: 
   builds:
     runs-on: 'ubuntu-latest'
+
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
       - uses: actions/checkout@v2
-
       - name: Install dependencies
+        with: 
+          node-version: ${{ matrix.node-version }}
         run: yarn
       - name: Build packages
         run: yarn build
