--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,11 @@ jobs:
         node-version: [14.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Install dependencies
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with: 
           node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
         run: yarn
       - name: Build packages
         run: yarn build
