--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,7 +10,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@ds.e/foundation": "^0.4.0",
+    "@matoss/foundation": "^0.4.0",
     "@storybook/addon-a11y": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
