ci: :green_heart: setting chromatic in ci env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,11 @@ jobs:
         run: yarn
       - name: Build packages
         run: yarn build
-      - name: Automated tests
-        run: yarn test
-
+      # - name: Automated tests
+      #   run: yarn test
+      - name: Visual regression tests
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrest.CHROMATIC_PROJECT_TOKEN }}
+      - run: yarn test:chromatic
 
     
