--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,14 +16,14 @@
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.19",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^26.0.7",
     "@types/react": "^17.0.37",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.0.0",
-    "jest": "^27.4.3",
+    "jest": "^26.1.0",
     "react": "^17.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1"
@@ -31,7 +31,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "yarn build --watch",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "yarn test --watch",
     "storybook:start": "start-storybook",
     "storybook:build": "build-storybook",
