--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,10 +21,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.7",
     "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.0.0",
     "jest": "^26.1.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1"
   },
