--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@matoss/foundation": "^0.4.0",
+    "@matoss/scss": "^0.4.0",
     "@storybook/addon-a11y": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
